--- a/about.html
+++ b/about.html
@@ -10,11 +10,9 @@ title: "About"
   </section>
 
   <p>
-    I'm a recent CS graduate from MIT. I enjoy reading, listening to music,
-    wasting time on <a href="http://quora.com/">Quora</a>, practicing taekwondo,
-    learning new cool stuff, and pretending to know something about photography
-    (just because I have a DSLR). I believe that a long beach walk is the
-    best way to start a day and I try to do it every weekend. One day I want to
-    become a physicist. I grew up in Kyrgyzstan, but now live in San Francisco and spend most of my waking hours working at <a href="https://locu.com">Locu</a>. 
+    I'm a recent CS graduate from MIT. I grew up in Kyrgyzstan, but now live in
+    San Francisco and spend most of my waking hours working at 
+    <a href="https://locu.com">Locu</a>. I enjoy reading, listening to music, wasting time on <a href="http://quora.com/">Quora</a>, practicing taekwondo,
+    learning new cool stuff, and taking random <a href="/photography">photos</a>.
   </p>
 </section>
