--- a/about.html
+++ b/about.html
@@ -6,13 +6,10 @@ title: "About"
 <section class="content">
   <h1>Maksim Stepanenko</h1>
   <section class="byline">
-    Always be learning
+    Just chilling.
   </section>
 
   <p>
-    I'm a recent CS graduate from MIT. I grew up in Kyrgyzstan, but now live in
-    San Francisco and spend most of my waking hours working at 
-    <a href="https://locu.com">Locu</a>. I enjoy reading, listening to music, wasting time on <a href="http://quora.com/">Quora</a>, practicing taekwondo,
-    learning new cool stuff, and taking random <a href="/photography">photos</a>.
+    Coming soon.
   </p>
 </section>
