--- a/photography.html
+++ b/photography.html
@@ -13,7 +13,7 @@ title: "Photography"
 <section class="content">
   <h1>Photography</h1>
   <section class="byline">
-    My photography and iphonography attempts.
+    My photography attempts and instagram feed.
   </section>
   <section id="galleria"></section>
   <script>
