--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@ layout: layout
 title: Home
 ---
 <section class="content">
+  <p id="blog-posts">Blog Posts</p>
   <ul class="listing">
     {% for post in site.posts %}
-    <li>
-      <span>
-        <a href="{{ post.url }}">{{ post.title }}</a> 
-        <p class="date">{{ post.date | date: "%B, %Y" }}</p>
-      </span> 
-    </li>
+    <li><span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </section>
