some style changes

--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@ title: "About"
 ---
 
 <section class="content">
-  <h1>Maksim Stepanenko</h1>
+  <style type="text/css">
+    #about {
+      color: #32AAFA;
+    }
+  </style>
+  <h1>About</h1>
   <section class="byline">
     Just chilling.
   </section>
