--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,11 @@ title: "Projects"
 ---
 
 <section class="content">
+  <style type="text/css">
+    #projects {
+      color: #32AAFA;
+    }
+  </style>
   <h1>Projects</h1>
   <section class="byline">
   </section>
