--- a/photography.html
+++ b/photography.html
@@ -9,6 +9,11 @@ title: "Photography"
   <script src="/js/photoMosaic/files/data/photoMosaic.data.js"></script>
   <link rel="stylesheet" href="/js/photoMosaic/files/css/photoMosaic.screen.css" />
   <link rel="stylesheet" href="/js/photoMosaic/files/css/prettyPhoto.css" />
+  <style type="text/css">
+    #photography {
+      color: #32AAFA;
+    }
+  </style>
 </head>
 <section class="content">
   <h1>Photography</h1>
