--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,7 @@ title: "Photography"
   <link rel="stylesheet" href="/js/photoMosaic/files/css/prettyPhoto.css" />
   <style type="text/css">
     #photography {
-      color: #32AAFA;
+      color: #D93722;
     }
   </style>
 </head>
