--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ title: "Projects"
 <section class="content">
   <style type="text/css">
     #projects {
-      color: #32AAFA;
+      color: #D93722;
     }
   </style>
   <h1>Projects</h1>
