--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: "About"
 <section class="content">
   <style type="text/css">
     #about {
-      color: #32AAFA;
+      color: #D93722;
     }
   </style>
   <h1>About</h1>
