--- a/about.html
+++ b/about.html
@@ -6,10 +6,15 @@ title: "About"
 <section class="content">
   <h1>About</h1>
   <section class="byline">
-    Just chilling.
+    
   </section>
 
   <p>
-    Coming soon.
+    My name is Maksim Stepanenko and I'm a software engineer at 
+    <a href="https://locu.com">Locu</a>. I grew up in Kyrgyzstan, took
+    some computer science classes at <a href="http://mit.edu/">MIT</a>, and now
+    live and work in San Francisco. Outside of work, I enjoy doing taekwondo,
+    running, reading, pretending to know something about photography, 
+    and learning new random things. 
   </p>
 </section>
