--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: layout
 title: Home
 ---
 <section class="content">
+  <div class="blog-posts">
   <p id="blog-posts">Blog Posts</p>
-  <ul class="listing">
-    {% for post in site.posts %}
-    <li><span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+    <ul class="listing">
+      {% for post in site.posts %}
+      <li><span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
 </section>
