--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 ---
-layout: layout
-title: Maksim Stepanenko
+layout: default
+title: Home
 ---
-<div class="blog-posts">
-  <ul class="listing">
-    {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      <span class="date">{{ post.date | date_to_string }}</span>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
 
+<div class='container'>
+  <div class='section'>
+    <h3>About</h3>
+    <p>
+    I grew up in <a href='http://en.wikipedia.org/wiki/Kyrgyzstan' target='_blank'>Kyrgyzstan</a>, but moved to the US for <a href='http://web.mit.edu/' target='_blank'>college</a> and eventually ended up in San Francisco. These days I spend most of my time working on bitcoin stuff at <a href='https://coinbase.com/' target='_blank'>Coinbase</a>. Before that I’ve worked at <a href='http://www.media.mit.edu/' target='_blank'>MIT Media Lab</a>, Google, and <a href='https://locu.com/' target='_blank'>Locu</a>. My interests include physics, martial arts, <a href='http://photography.maksim.ms/'>photography</a>, <a href='/books'>reading</a>, drinking coffee, running, climbing and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain based, technologies).
+    </p>
+  </div>
+  <div class='section'>
+    <h3>Profiles</h3>
+    <ul>
+      <li><a href='https://twitter.com/maksim_s' target='_blank'>Twitter</a></li>
+      <li><a href='https://github.com/maksim-s' target='_blank'>Github</a></li>
+      <li><a href='https://www.coinbase.com/maksim' target='_blank'>Coinbase</a></li>
+      <li><a href='https://keybase.io/maksim' target='_blank'>Keybase</a></li>
+      <li><a href='https://medium.com/@maksim_s' target='_blank'>Medium</a></li>
+      <li><a href='https://500px.com/MaksimStepanenko' target='_blank'>500px</a></li>
+    </ul>
+  </div>
+  <div class='section'>
+    <h3>Interesting links/blogs</h3>
+    <ul>
+      <li><a href='http://www.scottaaronson.com/blog/' target='_blank'>Scott Aaronson</a></li>
+      <li><a href='http://www.paulgraham.com/articles.html' target='_blank'>Paul Graham</a></li>
+      <li><a href='http://www.brainpickings.org/' target='_blank'>Brain Pickings</a></li>
+      <li><a href='http://avc.com/' target='_blank'>Fred Wilson</a></li>
+      <li><a href='http://cdixon.org/' target='_blank'>Chris Dixon</a></li>
+      <li><a href='http://www.farnamstreetblog.com/' target='_blank'>Farnam Street</a></li>
+      <li><a href='http://fourhourworkweek.com/blog/' target='_blank'>Tim Ferris</a></li>
+    </ul>
+  </div>
+</div>
