--- a/books/index.html
+++ b/books/index.html
@@ -21,6 +21,7 @@ title: Books
       <li><a href='http://www.amazon.com/Effective-Executive-Harperbusiness-Essentials-ebook/dp/B000FC11JW/?tag=maksistepa-20' target='_blank'>The Effective Executive, Peter Drucker</a></li>
       <li><a href='http://www.amazon.com/Zen-Mind-Beginners-Shunryu-Suzuki-ebook/dp/B00I8USOM0/?tag=maksistepa-20' target='_blank'>Zen Mind, Beginner’s mind, Shunryu Suzuki</a></li>
       <li><a href='http://www.amazon.com/Foundation-Isaac-Asimov-ebook/dp/B000FC1PWA/?tag=maksistepa-20' target='_blank'>The Foundation, Isaac Asimov</a></li>
+      <li><a href='http://www.amazon.com/Think-Like-Freak-Authors-Freakonomics-ebook/dp/B00BATINVS/?tag=maksistepa-20' target='_blank'>Think Like a Freak, Steven Levitt and Stephen Dubner</a></li>
     </ul>
   </div>
   <div class='section'>
