--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Home
+description: "I grew up in Kyrgyzstan, but moved to the US for college and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at Coinbase. Before that, I’ve worked at MIT Media Lab, Google, and Locu. My interests include physics, martial arts, photography, reading, drinking coffee, running, climbing and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies)."
 ---
 
 <div class='container'>
@@ -28,6 +29,7 @@ title: Home
       <li><a href='http://www.paulgraham.com/articles.html' target='_blank'>Paul Graham</a></li>
       <li><a href='http://www.brainpickings.org/' target='_blank'>Brain Pickings</a></li>
       <li><a href='http://avc.com/' target='_blank'>Fred Wilson</a></li>
+      <li><a href='http://kk.org/thetechnium/' target='_blank'>Kevin Kelly</a></li>
       <li><a href='http://cdixon.org/' target='_blank'>Chris Dixon</a></li>
       <li><a href='http://www.farnamstreetblog.com/' target='_blank'>Farnam Street</a></li>
       <li><a href='http://fourhourworkweek.com/blog/' target='_blank'>Tim Ferris</a></li>
