--- a/books/index.html
+++ b/books/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Books
+description: "One of my resolutions for 2013 was to read more, so I decided to spend at least 30 minutes every day reading. I’ve been pretty good about keeping that up, but of course there are days when I don’t do it. Below is the list of books I’ve read since then; some of them also include links to the notes I took while reading."
 ---
 
 <div class='container'>
@@ -21,7 +22,15 @@ title: Books
       <li><a href='http://www.amazon.com/Effective-Executive-Harperbusiness-Essentials-ebook/dp/B000FC11JW/?tag=maksistepa-20' target='_blank'>The Effective Executive, Peter Drucker</a></li>
       <li><a href='http://www.amazon.com/Zen-Mind-Beginners-Shunryu-Suzuki-ebook/dp/B00I8USOM0/?tag=maksistepa-20' target='_blank'>Zen Mind, Beginner’s mind, Shunryu Suzuki</a></li>
       <li><a href='http://www.amazon.com/Foundation-Isaac-Asimov-ebook/dp/B000FC1PWA/?tag=maksistepa-20' target='_blank'>The Foundation, Isaac Asimov</a></li>
+      <li><a href='http://www.amazon.com/Foundation-Empire-Isaac-Asimov-ebook/dp/B000FC1PWK/?tag=maksistepa-20' target='_blank'>Foundation and Empire, Isaac Asimov</a></li>
+      <li><a href='http://www.amazon.com/Second-Foundation-Isaac-Asimov-ebook/dp/B000FC1PWU/?tag=maksistepa-20' target='_blank'>Second Foundation, Isaac Asimov</a></li>
       <li><a href='http://www.amazon.com/Think-Like-Freak-Authors-Freakonomics-ebook/dp/B00BATINVS/?tag=maksistepa-20' target='_blank'>Think Like a Freak, Steven Levitt and Stephen Dubner</a></li>
+      <li><a href='http://www.amazon.com/Crossroads-Should-Must-Follow-Passion-ebook/dp/B00N2A6HMK/?tag=maksistepa-20' target='_blank'>The Crossroads of Should and Must, Elle Luna</a></li>
+      <li><a href='http://www.amazon.com/Cats-Cradle-Kurt-Vonnegut-ebook/dp/B003XRELGQ/?tag=maksistepa-20' target='_blank'>Cat's Cradle, Kurt Vonnegut</a></li>
+      <li><a href='http://www.amazon.com/Working-Days-Journals-Grapes-Wrath/dp/0140144579/?tag=maksistepa-20' target='_blank'>Working Days: The Journals of The Grapes of Wrath, John Steinbeck</a></li>
+      <li><a href='http://www.amazon.com/Vagabonding-Uncommon-Guide-Long-Term-Travel-ebook/dp/B000FBFMKM/?tag=maksistepa-20' target='_blank'>Vagabonding: An Uncommon Guide to the Art of Long-Term World Travel, Rolf Potts</a></li>
+      <li><a href='http://www.amazon.com/Elon-Musk-SpaceX-Fantastic-Future-ebook/dp/B00KVI76ZS/?tag=maksistepa-20' target='_blank'>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future, Ashlee Vance</a></li>
+      <li><a href='http://www.amazon.com/The-Martian-Novel-Andy-Weir-ebook/dp/B00EMXBDMA/?tag=maksistepa-20' target='_blank'>The Martian: A Novel, Andy Weir</a></li>
     </ul>
   </div>
   <div class='section'>
