--- a/books/index.html
+++ b/books/index.html
@@ -31,6 +31,16 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
       <li><a href='http://www.amazon.com/Vagabonding-Uncommon-Guide-Long-Term-Travel-ebook/dp/B000FBFMKM/?tag=maksistepa-20' target='_blank'>Vagabonding: An Uncommon Guide to the Art of Long-Term World Travel, Rolf Potts</a></li>
       <li><a href='http://www.amazon.com/Elon-Musk-SpaceX-Fantastic-Future-ebook/dp/B00KVI76ZS/?tag=maksistepa-20' target='_blank'>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future, Ashlee Vance</a></li>
       <li><a href='http://www.amazon.com/The-Martian-Novel-Andy-Weir-ebook/dp/B00EMXBDMA/?tag=maksistepa-20' target='_blank'>The Martian: A Novel, Andy Weir</a></li>
+      <li><a href='http://www.amazon.com/Been-Good-Life-Isaac-Asimov/dp/1573929689/?tag=maksistepa-20' target='_blank'>It's Been a Good Life, Isaac Asimov</a></li>
+      <li><a href='http://www.amazon.com/The-5-Elements-Effective-Thinking/dp/0691156662/?tag=maksistepa-20' target='_blank'>The 5 Elements of Effective Thinking, Edward Burger and Michael Starbird</a></li>
+      <li><a href='http://www.amazon.com/The-Rise-Superman-Decoding-Performance/dp/1477800832/?tag=maksistepa-20' target='_blank'>The Rise of Superman: Decoding the Science of Ultimate Human Performance, Steven Kotler</a></li>
+      <li><a href='http://www.amazon.com/The-Start-up-You-Yourself-Transform-ebook/dp/B0050DIWHU/?tag=maksistepa-20' target='_blank'>The Start-up of You, Reid Hoffman</a></li>
+      <li><a href='http://www.amazon.com/Love-Math-Heart-Hidden-Reality/dp/0465050743/?tag=maksistepa-20' target='_blank'>Love and Math: The Heart of Hidden Reality, Edward Frenkel</a></li>
+      <li><a href='http://www.amazon.com/Viral-Loop-Facebook-Businesses-Themselves/dp/1401323499/?tag=maksistepa-20' target='_blank'>Viral Loop, Adam Penenberg</a></li>
+      <li><a href='http://www.amazon.com/Snow-Crash-Neal-Stephenson/dp/1491515058/?tag=maksistepa-20' target='_blank'>Snow Crash, Neal Stephenson</a></li>
+      <li><a href='http://www.amazon.com/Alone-Wall-Alex-Honnold/dp/0393247627/?tag=maksistepa-20' target='_blank'>Alone on the Wall, Alex Honnold</a></li>
+      <li><a href='http://www.amazon.com/Hard-Thing-About-Things-Building-ebook/dp/B00DQ845EA/?tag=maksistepa-20' target='_blank'>The Hard Thing About Hard Things, Ben Horowitz</a></li>
+      <li><a href='https://a16z.com/2015/01/09/pmarca-blog-ebook/?tag=maksistepa-20' target='_blank'>The Pmarca Blog Archives, Marc Andreessen</a></li>
     </ul>
   </div>
   <div class='section'>
@@ -41,7 +51,7 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
       <li><a href='http://www.amazon.com/Catching-Big-Fish-Meditation-Consciousness/dp/1585426121/?tag=maksistepa-20' target='_blank'>Catching the Big Fish: Meditation, Consciousness, and Creativity, David Lynch</a></li>
       <li><a href='http://www.amazon.com/Decoded-Jay-Z-ebook/dp/B003E8AIJS/?tag=maksistepa-20' target='_blank'>Decoded, Jay-Z</a></li>
       <li><a href='http://www.amazon.com/Design-as-Art-Bruno-Munari/dp/0141035811/?tag=maksistepa-20' target='_blank'>Design as Art, Bruno Munari</a></li>
-      <li><a href='http://www.amazon.com/Hard-Thing-About-Things-Building-ebook/dp/B00DQ845EA/?tag=maksistepa-20' target='_blank'>The hard thing about hard things, Ben Horowitz</a></li>
+      <li><a href='http://www.amazon.com/Hard-Thing-About-Things-Building-ebook/dp/B00DQ845EA/?tag=maksistepa-20' target='_blank'>The Hard Thing About Hard Things, Ben Horowitz</a></li>
       <li><a href='http://www.amazon.com/Plex-Google-Thinks-Works-Shapes-ebook/dp/B003UYUP6M/?tag=maksistepa-20' target='_blank'>In the Plex, Steven Levy</a></li>
       <li><a href='http://www.amazon.com/Last-Lecture-Randy-Pausch-ebook/dp/B00139VU7E/?tag=maksistepa-20' target='_blank'>The last lecture, Randy Pausch</a></li>
       <li><a href='http://www.amazon.com/Meditations-Marcus-Aurelius-ebook/dp/B0082XJGRK/?tag=maksistepa-20' target='_blank'>Meditations, Marcus Aurelius</a></li>
