--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 title: Home
-description: "I grew up in Kyrgyzstan, but moved to the US for college and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at Coinbase. Before that, I’ve worked at MIT Media Lab, Google, and Locu. My interests include physics, martial arts, photography, reading, drinking coffee, running, climbing and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies)."
+description: "I grew up in Kyrgyzstan, but moved to the US for college and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at Coinbase. Before that, I’ve worked at MIT Media Lab, Google, and Locu. My interests include reading, climbing, photography, physics, drinking coffee, running, martial arts and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies)."
 ---
 
 <div class='container'>
   <div class='section'>
     <h3>About</h3>
     <p>
-      I grew up in <a href='http://en.wikipedia.org/wiki/Kyrgyzstan' target='_blank'>Kyrgyzstan</a>, but moved to the US for <a href='http://web.mit.edu/' target='_blank'>college</a> and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at <a href='https://coinbase.com/' target='_blank'>Coinbase</a>. Before that, I’ve worked at <a href='http://www.media.mit.edu/' target='_blank'>MIT Media Lab</a>, Google, and <a href='https://locu.com/' target='_blank'>Locu</a>. My interests include physics, martial arts, <a href='http://photography.maksim.ms/'>photography</a>, <a href='/books'>reading</a>, drinking coffee, running, climbing and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies).
+      I grew up in <a href='http://en.wikipedia.org/wiki/Kyrgyzstan' target='_blank'>Kyrgyzstan</a>, but moved to the US for <a href='http://web.mit.edu/' target='_blank'>college</a> and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at <a href='https://coinbase.com/' target='_blank'>Coinbase</a>. Before that, I’ve worked at <a href='http://www.media.mit.edu/' target='_blank'>MIT Media Lab</a>, Google, and <a href='https://locu.com/' target='_blank'>Locu</a>. My interests include <a href='/books'>reading</a>, climbing, <a href='http://photography.maksim.ms/'>photography</a>, physics, drinking coffee, running, martial arts and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies).
     </p>
   </div>
   <div class='section'>
@@ -19,7 +19,6 @@ description: "I grew up in Kyrgyzstan, but moved to the US for college and event
       <li><a href='https://www.coinbase.com/maksim' target='_blank'>Coinbase</a></li>
       <li><a href='https://keybase.io/maksim' target='_blank'>Keybase</a></li>
       <li><a href='https://medium.com/@maksim_s' target='_blank'>Medium</a></li>
-      <li><a href='https://500px.com/MaksimStepanenko' target='_blank'>500px</a></li>
     </ul>
   </div>
   <div class='section'>
@@ -33,6 +32,8 @@ description: "I grew up in Kyrgyzstan, but moved to the US for college and event
       <li><a href='http://cdixon.org/' target='_blank'>Chris Dixon</a></li>
       <li><a href='http://www.farnamstreetblog.com/' target='_blank'>Farnam Street</a></li>
       <li><a href='http://fourhourworkweek.com/blog/' target='_blank'>Tim Ferris</a></li>
+      <li><a href='http://www.meltingasphalt.com/' target='_blank'>Melting Asphalt</a></li>
+      <li><a href='http://waitbutwhy.com/' target='_blank'>Wait But Why</a></li>
     </ul>
   </div>
 </div>
