--- a/books/index.html
+++ b/books/index.html
@@ -11,96 +11,7 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
       One of my resolutions for 2013 was to read more, so I decided to spend at least 30 minutes every day reading. I’ve been pretty good about keeping that up, but of course there are days when I don’t do it. Below is the list of books I’ve read since then; some of them also include links to the notes I took while reading.
     </p>
   </div>
-  <div class='section'>
-    <h3>2015</h3>
-    <ul>
-      <li><a href='http://www.amazon.com/Innovators-Hackers-Geniuses-Created-Revolution-ebook/dp/B00JGAS65Q/?tag=maksistepa-20' target='_blank'>The Innovators, Walter Isaacson</a></li>
-      <li><a href='http://www.amazon.com/Quantum-Computing-since-Democritus-Aaronson/dp/0521199565/?tag=maksistepa-20' target='_blank'>Quantum Computing since Democritus, Scott Aaronson</a></li>
-      <li><a href='http://www.amazon.com/Silver-Cord-Kevin-Kelly/dp/1940689015/?tag=maksistepa-20' target='_blank'>The Silver Cord, Kevin Kelly</a></li>
-      <li><a href='http://www.amazon.com/MONEY-Master-Game-Financial-Freedom-ebook/dp/B00MZAIU4G/?tag=maksistepa-20' target='_blank'>Money Master the Game, Tony Robbins</a></li> 
-      <li><a href='http://www.amazon.com/Flow-Harper-Perennial-Modern-Classics-ebook/dp/B000W94FE6/?tag=maksistepa-20' target='_blank'>Flow, Mihaly Csikszentmihalyi</a></li>
-      <li><a href='http://www.amazon.com/Effective-Executive-Harperbusiness-Essentials-ebook/dp/B000FC11JW/?tag=maksistepa-20' target='_blank'>The Effective Executive, Peter Drucker</a></li>
-      <li><a href='http://www.amazon.com/Zen-Mind-Beginners-Shunryu-Suzuki-ebook/dp/B00I8USOM0/?tag=maksistepa-20' target='_blank'>Zen Mind, Beginner’s mind, Shunryu Suzuki</a></li>
-      <li><a href='http://www.amazon.com/Foundation-Isaac-Asimov-ebook/dp/B000FC1PWA/?tag=maksistepa-20' target='_blank'>The Foundation, Isaac Asimov</a></li>
-      <li><a href='http://www.amazon.com/Foundation-Empire-Isaac-Asimov-ebook/dp/B000FC1PWK/?tag=maksistepa-20' target='_blank'>Foundation and Empire, Isaac Asimov</a></li>
-      <li><a href='http://www.amazon.com/Second-Foundation-Isaac-Asimov-ebook/dp/B000FC1PWU/?tag=maksistepa-20' target='_blank'>Second Foundation, Isaac Asimov</a></li>
-      <li><a href='http://www.amazon.com/Think-Like-Freak-Authors-Freakonomics-ebook/dp/B00BATINVS/?tag=maksistepa-20' target='_blank'>Think Like a Freak, Steven Levitt and Stephen Dubner</a></li>
-      <li><a href='http://www.amazon.com/Crossroads-Should-Must-Follow-Passion-ebook/dp/B00N2A6HMK/?tag=maksistepa-20' target='_blank'>The Crossroads of Should and Must, Elle Luna</a></li>
-      <li><a href='http://www.amazon.com/Cats-Cradle-Kurt-Vonnegut-ebook/dp/B003XRELGQ/?tag=maksistepa-20' target='_blank'>Cat's Cradle, Kurt Vonnegut</a></li>
-      <li><a href='http://www.amazon.com/Working-Days-Journals-Grapes-Wrath/dp/0140144579/?tag=maksistepa-20' target='_blank'>Working Days: The Journals of The Grapes of Wrath, John Steinbeck</a></li>
-      <li><a href='http://www.amazon.com/Vagabonding-Uncommon-Guide-Long-Term-Travel-ebook/dp/B000FBFMKM/?tag=maksistepa-20' target='_blank'>Vagabonding: An Uncommon Guide to the Art of Long-Term World Travel, Rolf Potts</a></li>
-      <li><a href='http://www.amazon.com/Elon-Musk-SpaceX-Fantastic-Future-ebook/dp/B00KVI76ZS/?tag=maksistepa-20' target='_blank'>Elon Musk: Tesla, SpaceX, and the Quest for a Fantastic Future, Ashlee Vance</a></li>
-      <li><a href='http://www.amazon.com/The-Martian-Novel-Andy-Weir-ebook/dp/B00EMXBDMA/?tag=maksistepa-20' target='_blank'>The Martian: A Novel, Andy Weir</a></li>
-      <li><a href='http://www.amazon.com/Been-Good-Life-Isaac-Asimov/dp/1573929689/?tag=maksistepa-20' target='_blank'>It's Been a Good Life, Isaac Asimov</a></li>
-      <li><a href='http://www.amazon.com/The-5-Elements-Effective-Thinking/dp/0691156662/?tag=maksistepa-20' target='_blank'>The 5 Elements of Effective Thinking, Edward Burger and Michael Starbird</a></li>
-      <li><a href='http://www.amazon.com/The-Rise-Superman-Decoding-Performance/dp/1477800832/?tag=maksistepa-20' target='_blank'>The Rise of Superman: Decoding the Science of Ultimate Human Performance, Steven Kotler</a></li>
-      <li><a href='http://www.amazon.com/The-Start-up-You-Yourself-Transform-ebook/dp/B0050DIWHU/?tag=maksistepa-20' target='_blank'>The Start-up of You, Reid Hoffman</a></li>
-      <li><a href='http://www.amazon.com/Love-Math-Heart-Hidden-Reality/dp/0465050743/?tag=maksistepa-20' target='_blank'>Love and Math: The Heart of Hidden Reality, Edward Frenkel</a></li>
-      <li><a href='http://www.amazon.com/Viral-Loop-Facebook-Businesses-Themselves/dp/1401323499/?tag=maksistepa-20' target='_blank'>Viral Loop, Adam Penenberg</a></li>
-      <li><a href='http://www.amazon.com/Snow-Crash-Neal-Stephenson/dp/1491515058/?tag=maksistepa-20' target='_blank'>Snow Crash, Neal Stephenson</a></li>
-      <li><a href='http://www.amazon.com/Alone-Wall-Alex-Honnold/dp/0393247627/?tag=maksistepa-20' target='_blank'>Alone on the Wall, Alex Honnold</a></li>
-      <li><a href='http://www.amazon.com/Hard-Thing-About-Things-Building-ebook/dp/B00DQ845EA/?tag=maksistepa-20' target='_blank'>The Hard Thing About Hard Things, Ben Horowitz</a></li>
-      <li><a href='https://a16z.com/2015/01/09/pmarca-blog-ebook/?tag=maksistepa-20' target='_blank'>The Pmarca Blog Archives, Marc Andreessen</a></li>
-    </ul>
-  </div>
-  <div class='section'>
-    <h3>2014</h3>
-    <ul>
-      <li><a href='http://www.amazon.com/1984-George-Orwell-ebook/dp/B003JTHWKU/?tag=maksistepa-20' target='_blank'>1984, George Orwell</a></li>
-      <li><a href='http://www.amazon.com/Animal-Farm-Fairy-George-Orwell-ebook/dp/B003K16PUU/?tag=maksistepa-20' target='_blank'>Animal Farm, George Orwell</a></li>
-      <li><a href='http://www.amazon.com/Catching-Big-Fish-Meditation-Consciousness/dp/1585426121/?tag=maksistepa-20' target='_blank'>Catching the Big Fish: Meditation, Consciousness, and Creativity, David Lynch</a></li>
-      <li><a href='http://www.amazon.com/Decoded-Jay-Z-ebook/dp/B003E8AIJS/?tag=maksistepa-20' target='_blank'>Decoded, Jay-Z</a></li>
-      <li><a href='http://www.amazon.com/Design-as-Art-Bruno-Munari/dp/0141035811/?tag=maksistepa-20' target='_blank'>Design as Art, Bruno Munari</a></li>
-      <li><a href='http://www.amazon.com/Hard-Thing-About-Things-Building-ebook/dp/B00DQ845EA/?tag=maksistepa-20' target='_blank'>The Hard Thing About Hard Things, Ben Horowitz</a></li>
-      <li><a href='http://www.amazon.com/Plex-Google-Thinks-Works-Shapes-ebook/dp/B003UYUP6M/?tag=maksistepa-20' target='_blank'>In the Plex, Steven Levy</a></li>
-      <li><a href='http://www.amazon.com/Last-Lecture-Randy-Pausch-ebook/dp/B00139VU7E/?tag=maksistepa-20' target='_blank'>The last lecture, Randy Pausch</a></li>
-      <li><a href='http://www.amazon.com/Meditations-Marcus-Aurelius-ebook/dp/B0082XJGRK/?tag=maksistepa-20' target='_blank'>Meditations, Marcus Aurelius</a></li>
-      <li><a href='http://www.amazon.com/Shortness-Life-Penguin-Great-Ideas-ebook/dp/B00BCU07LO/?tag=maksistepa-20' target='_blank'>On Shortness of Life, Seneca</a></li>
-      <li><a href='http://www.amazon.com/Outliers-Story-Success-Malcolm-Gladwell-ebook/dp/B001ANYDAO/?tag=maksistepa-20' target='_blank'>Outliers: The story of success, Malcolm Gladwell</a></li>
-      <li><a href='http://www.amazon.com/Quiet-Power-Introverts-World-Talking-ebook/dp/B004J4WNL2/?tag=maksistepa-20' target='_blank'>Quiet: The Power of Introverts in a World That Can't Stop Talking, Susan Cain</a></li>
-      <li><a href='http://www.amazon.com/Secret-World-Sleep-Surprising-Science/dp/1137279478/?tag=maksistepa-20' target='_blank'>The secret world of sleep, Penelope Lewis</a></li>
-      <li><a href='http://www.amazon.com/Seneca-Letters-Stoic-Biography-Annotated-ebook/dp/B005TMUYX2/?tag=maksistepa-20' target='_blank'>Seneca: Letters from a Stoic</a></li>
-      <li><a href='http://www.amazon.com/Good-They-Cant-Ignore-You-ebook/dp/B0076DDBJ6/?tag=maksistepa-20' target='_blank'>So good they can’t ignore you, Cal Newport</a></li>
-      <li><a href='http://www.amazon.com/Steal-Like-Artist-Things-Creative-ebook/dp/B0074QGGK6/?tag=maksistepa-20' target='_blank'>Steal like an artist, Austin Kleon</a></li>
-      <li><a href='http://www.amazon.com/Thoughts-Design-Paul-Rand-ebook/dp/B00JVZ42I6/?tag=maksistepa-20' target='_blank'>Thoughts on Design, Paul Rand</a></li>
-      <li><a href='http://www.amazon.com/What-Care-Other-People-Think/dp/0393320928/?tag=maksistepa-20' target='_blank'>What do you care what other people think?, Richard Feynman</a></li>
-      <li><a href='http://www.amazon.com/Surely-Feynman-Adventures-Curious-Character/dp/0393316041/?tag=maksistepa-20' target='_blank'>Surely you’re joking, mr. Feynman, Richard Feynman</a></li>
-      <li><a href='http://www.amazon.com/Our-Mathematical-Universe-Ultimate-Reality/dp/0307744256/?tag=maksistepa-20' target='_blank'>Our Mathematical Universe, Max Tegmark</a></li>
-      <li><a href='http://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296/?tag=maksistepa-20' target='_blank'>Zero to One, Peter Thiel</a></li>
-      <li><a href='http://www.amazon.com/Letters-Self-Made-Merchant-His-Son/dp/B003YHBET2/?tag=maksistepa-20' target='_blank'>Letters from a self made merchant to his son, George Lorimer</a></li>
-      <li><a href='http://silence.io/' target='_blank'>Silence, Josh Long</a></li>
-      <li><a href='http://www.amazon.com/When-Google-WikiLeaks-Julian-Assange-ebook/dp/B00PYZONM2/?tag=maksistepa-20' target='_blank'>When Google met Wikileaks, Julian Assange</a></li>
-    </ul>
-  </div>
-  <div class='section'>
-    <h3>2013</h3>
-    <ul>
-      <li><a href='http://www.amazon.com/Understanding-Power-Indispensible-Chomsky-Noam/dp/1565847032/?tag=maksistepa-20' target='_blank'>Understanding Power, Noam Chomsky</a></li>
-      <li><a href='http://www.amazon.com/Art-Spirit-Robert-Henri/dp/0465002633/?tag=maksistepa-20' target='_blank'>The Art Spirit, Robert Henri</a></li>
-      <li><a href='http://www.amazon.com/Autobiography-Benjamin-Franklin/dp/1508475091/?tag=maksistepa-20' target='_blank'>The Autobiography, Benjamin Franklin</a></li>
-      <li><a href='http://www.amazon.com/Without-Their-Permission-Century-Managed/dp/1455520020/?tag=maksistepa-20' target='_blank'>Without their Permission, Alexis Ohanian</a></li>
-      <li><a href='http://www.amazon.com/Creative-Confidence-Unleashing-Potential-Within/dp/038534936X/?tag=maksistepa-20' target='_blank'>Creative Confidence: Unleashing the Creative Potential Within Us All, Tom and David Kelley</a></li>
-      <li><a href='http://www.amazon.com/Daily-Rituals-How-Artists-Work/dp/0307273601/?tag=maksistepa-20' target='_blank'>Daily Rituals: How Artists Work, Mason Currey</a></li>
-      <li><a href='http://www.amazon.com/Delivering-Happiness-Profits-Passion-Purpose/dp/0446576220/?tag=maksistepa-20' target='_blank'>Delivering Happiness, Tony Hsieh</a></li>
-      <li><a href='http://www.amazon.com/4-Hour-Body-Uncommon-Incredible-Superhuman/dp/030746363X/?tag=maksistepa-20' target='_blank'>The 4-Hour Body, Tim Ferris</a></li>
-      <li><a href='http://www.amazon.com/Zen-Motorcycle-Maintenance-Robert-Pirsig-ebook/dp/B0026772N8/?tag=maksistepa-20' target='_blank'>Zen and the Art of Motorcycle Maintenance, Robert M. Pirsig</a></li>
-      <li><a href='http://www.amazon.com/Designing-Mind-Second-Understanding-Guidelines/dp/0124079148/?tag=maksistepa-20' target='_blank'>Designing with the Mind in Mind, Jeff Johnson</a></li>
-      <li><a href='http://www.amazon.com/Elements-Style-Fourth-William-Strunk/dp/020530902X/?tag=maksistepa-20' target='_blank'>The Elements of Style, William Strunk</a></li>
-      <li><a href='http://www.amazon.com/Everything-Store-Jeff-Bezos-Amazon-ebook/dp/B00BWQW73E/?tag=maksistepa-20' target='_blank'>The Everything Store: Jeff Bezos and the Age of Amazon, Brad Stone</a></li>
-      <li><a href='http://www.amazon.com/4-Hour-Workweek-Expanded-Updated-Cutting-Edge-ebook/dp/B002WE46UW/?tag=maksistepa-20' target='_blank'>The 4-Hour Workweek, Tim Ferris</a></li>
-      <li><a href='http://www.amazon.com/Good-Great-Some-Companies-Others-ebook/dp/B0058DRUV6/?tag=maksistepa-20' target='_blank'>Good to Great, Jim Collins</a></li>
-      <li><a href='http://www.amazon.com/Hackers-Painters-Big-Ideas-Computer/dp/1449389554/?tag=maksistepa-20' target='_blank'>Hackers and Painters, Paul Graham</a></li>
-      <li><a href='http://www.amazon.com/Hatching-Twitter-Story-Friendship-Betrayal-ebook/dp/B00CDUVSQ0/?tag=maksistepa-20' target='_blank'>Hatching Twitter, Nick Bilton</a></li>
-      <li><a href='http://www.amazon.com/Mans-Search-Meaning-Viktor-Frankl-ebook/dp/B009U9S6FI/?tag=maksistepa-20' target='_blank'>Man's Search for Meaning, Victor E. Frankl</a></li>
-      <li><a href='http://www.amazon.com/Moonwalking-Einstein-Science-Remembering-Everything-ebook/dp/B004H4XI5O/?tag=maksistepa-20' target='_blank'>Moonwalking with Einstein, Joshua Foer</a></li>
-      <li><a href='http://www.amazon.com/My-Inventions-Nikola-Tesla-ebook/dp/B0046A9RWW/?tag=maksistepa-20' target='_blank'>My Inventions, Nikola Tesla</a></li>
-      <li><a href='http://www.amazon.com/Non-Designers-Design-Book-4th/dp/0133966151/?tag=maksistepa-20' target='_blank'>The Non-Designer's Design Book, Robin Williams</a></li>
-      <li><a href='http://www.amazon.com/One-World-Schoolhouse-Education-Reimagined/dp/1455508373/?tag=maksistepa-20' target='_blank'>The One World Schoolhouse: Education Reimagined, Salman Khan</a></li>
-      <li><a href='http://www.amazon.com/Power-Habit-What-Life-Business-ebook/dp/B0055PGUYU/?tag=maksistepa-20' target='_blank'>The Power of Habit, Charles Duhigg</a></li>
-      <li><a href='http://www.amazon.com/Queen-Katwe-Extraordinary-Becoming-Grandmaster-ebook/dp/B007EE4M90/?tag=maksistepa-20' target='_blank'>The Queen of Katwe, Tim Crothers</a></li>
-      <li><a href='http://www.amazon.com/Rework-Jason-Fried-ebook/dp/B002MUAJ2A/?tag=maksistepa-20' target='_blank'>Rework, Jason Fried and David Heinemeier Hansson</a></li>
-      <li><a href='http://www.amazon.com/Screw-Lets-Do-Lessons-Quick-ebook/dp/B005F3GK92/?tag=maksistepa-20' target='_blank'>Screw it, Let's Do It, Richard Branson</a></li>
-      <li><a href='http://www.amazon.com/Singularity-Near-Humans-Transcend-Biology/dp/0143037889/?tag=maksistepa-20' target='_blank'>The Singularity is Near, Ray Kurzweil</a></li>
-    </ul>
-  </div>
+  {% include_relative 2015.html %}
+  {% include_relative 2014.html %}
+  {% include_relative 2013.html %}
 </div>
