--- a/books/index.html
+++ b/books/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Books
+title: Bookshelf
 description: "One of my resolutions for 2013 was to read more, so I decided to spend at least 30 minutes every day reading. I’ve been pretty good about keeping that up, but of course there are days when I don’t do it. Below is the list of books I’ve read since then; some of them also include links to the notes I took while reading."
 ---
 
 <div class='container'>
   <div class='section'>
-    <h3>Books</h3>
+    <h3>Bookshelf</h3>
     <p>
       One of my resolutions for 2013 was to read more, so I decided to spend at least 30 minutes every day reading. I’ve been pretty good about keeping that up, but of course there are days when I don’t do it. Below is the list of books I’ve read since then; some of them also include links to the notes I took while reading.
     </p>
