--- a/books/2015.html
+++ b/books/2015.html
@@ -81,5 +81,12 @@
     <li>
       <a href='https://a16z.com/2015/01/09/pmarca-blog-ebook/' target='_blank'>The Pmarca Blog Archives, Marc Andreessen</a>
     </li>
+    <li>
+      [<a href='{% post_url 2015-12-25-superintelligence %}'>Notes</a>]
+      <a href='http://www.amazon.com/Superintelligence-Dangers-Strategies-Nick-Bostrom/dp/0199678111/' target='_blank'>Superintelligence: Paths, Dangers, Strategies by Nick Bostrom</a>
+    </li>
+    <li>
+      <a href='http://www.amazon.com/Essays-Love-Alain-De-Botton/dp/0330440780' target='_blank'>Essays In Love, Alain De Botton</a>
+    </li>
   </ul>
 </div>
