--- a/books/2015.html
+++ b/books/2015.html
@@ -88,5 +88,11 @@
     <li>
       <a href='http://www.amazon.com/Essays-Love-Alain-De-Botton/dp/0330440780' target='_blank'>Essays In Love, Alain De Botton</a>
     </li>
+    <li>
+      <a href='http://www.amazon.com/The-Charisma-Myth-Personal-Magnetism/dp/1591845947' target='_blank'>The Charisma Myth,  Olivia Fox Cabane</a>
+    </li>
+    <li>
+      <a href='http://www.amazon.com/Lying-Sam-Harris/dp/1940051002' target='_blank'>Lying, Sam Harris</a>
+    </li>
   </ul>
 </div>
