--- a/books/2015.html
+++ b/books/2015.html
@@ -94,5 +94,8 @@
     <li>
       <a href='http://www.amazon.com/Lying-Sam-Harris/dp/1940051002' target='_blank'>Lying, Sam Harris</a>
     </li>
+    <li>
+      <a href='http://www.amazon.com/To-Sell-Is-Human-Surprising/dp/1594631905' target='_blank'>To Sell Is Human, Daniel H. Pink</a>
+    </li>
   </ul>
 </div>
