Split into categories

--- a/books/index.html
+++ b/books/index.html
@@ -11,6 +11,7 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
       One of my resolutions for 2013 was to read more, so I decided to spend at least 30 minutes every day reading. I’ve been pretty good about keeping that up, but of course there are days when I don’t do it. Below is the list of books I’ve read since then; some of them also include links to the notes I took while reading.
     </p>
   </div>
+  {% include_relative 2016.html %}
   {% include_relative 2015.html %}
   {% include_relative 2014.html %}
   {% include_relative 2013.html %}
