--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ description: "I grew up in Kyrgyzstan, but moved to the US for college and event
       <li><a href='http://kk.org/thetechnium/' target='_blank'>Kevin Kelly</a></li>
       <li><a href='http://cdixon.org/' target='_blank'>Chris Dixon</a></li>
       <li><a href='http://www.farnamstreetblog.com/' target='_blank'>Farnam Street</a></li>
-      <li><a href='http://fourhourworkweek.com/blog/' target='_blank'>Tim Ferris</a></li>
+      <li><a href='http://fourhourworkweek.com/blog/' target='_blank'>Tim Ferriss</a></li>
       <li><a href='http://www.meltingasphalt.com/' target='_blank'>Melting Asphalt</a></li>
       <li><a href='http://waitbutwhy.com/' target='_blank'>Wait But Why</a></li>
     </ul>
