All of the books

--- a/books/book.html
+++ b/books/book.html
@@ -1,7 +1,5 @@
 <li>
   <div class='book'>
-    <div class='book-title'>{{ post.book_title }} by {{ post.book_author }}</div>
-    <a href='{{ post.url }}'>Notes</a>
-    <a href='{{ post.book_link }}' target='_blank'>Amazon</a>
+    <div class='book-title'><a href='{{ post.url }}'>{{ post.book_title }} by {{ post.book_author }}</a> </div>
   </div>
 </li>
