--- a/books/index.html
+++ b/books/index.html
@@ -14,7 +14,8 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
   <div class='section'>
     <h3>2016</h3>
     <ul>
-      {% for post in site.posts %}
+      {% assign items = site.posts | sort: 'book_rating' %}
+      {% for post in items reversed %}
         {% if post.category contains 'book' and post.book_read_year == 2016 %}
           {% include_relative book.html %}
         {% endif %}
@@ -24,7 +25,8 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
   <div class='section'>
     <h3>2015</h3>
     <ul>
-      {% for post in site.posts %}
+      {% assign items = site.posts | sort: 'book_rating' %}
+      {% for post in items reversed %}
         {% if post.category contains 'book' and post.book_read_year == 2015 %}
           {% include_relative book.html %}
         {% endif %}
@@ -34,7 +36,8 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
   <div class='section'>
     <h3>2014</h3>
     <ul>
-      {% for post in site.posts %}
+      {% assign items = site.posts | sort: 'book_rating' %}
+      {% for post in items reversed %}
         {% if post.category contains 'book' and post.book_read_year == 2014 %}
           {% include_relative book.html %}
         {% endif %}
@@ -44,7 +47,8 @@ description: "One of my resolutions for 2013 was to read more, so I decided to s
   <div class='section'>
     <h3>2013</h3>
     <ul>
-      {% for post in site.posts %}
+      {% assign items = site.posts | sort: 'book_rating' %}
+      {% for post in items reversed %}
         {% if post.category contains 'book' and post.book_read_year == 2013 %}
           {% include_relative book.html %}
         {% endif %}
