--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 title: Home
-description: "I grew up in Kyrgyzstan, but moved to the US for college and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at Coinbase. Before that, I’ve worked at MIT Media Lab, Google, and Locu. My interests include reading, climbing, photography, physics, drinking coffee, running, martial arts and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies)."
 ---
 
 <div class='container'>
   <div class='section'>
     <h3>About</h3>
     <p>
-      I grew up in <a href='http://en.wikipedia.org/wiki/Kyrgyzstan' target='_blank'>Kyrgyzstan</a>, but moved to the US for <a href='http://web.mit.edu/' target='_blank'>college</a> and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at <a href='https://coinbase.com/' target='_blank'>Coinbase</a>. Before that, I’ve worked at <a href='http://www.media.mit.edu/' target='_blank'>MIT Media Lab</a>, Google, and <a href='https://locu.com/' target='_blank'>Locu</a>. My interests include <a href='/books'>reading</a>, climbing, <a href='http://photography.maksim.ms/'>photography</a>, physics, drinking coffee, running, martial arts and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies).
+      I grew up in <a href='http://en.wikipedia.org/wiki/Kyrgyzstan' target='_blank'>Kyrgyzstan</a>, but moved to the US to study Computer Science at MIT and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at <a href='https://coinbase.com/' target='_blank'>Coinbase</a>. Before that, I’ve worked at <a href='http://www.media.mit.edu/' target='_blank'>MIT Media Lab</a>, Google, and <a href='https://locu.com/' target='_blank'>Locu</a>. My interests include <a href='/books'>reading</a>, physics, climbing, <a href='http://photography.maksim.ms/'>photography</a>, coffee, running, martial arts and of course everything related to tech.
     </p>
   </div>
   <div class='section'>
@@ -16,7 +15,6 @@ description: "I grew up in Kyrgyzstan, but moved to the US for college and event
     <ul>
       <li><a href='https://twitter.com/maksim_s' target='_blank'>Twitter</a></li>
       <li><a href='https://github.com/maksim-s' target='_blank'>Github</a></li>
-      <li><a href='https://www.coinbase.com/maksim' target='_blank'>Coinbase</a></li>
       <li><a href='https://keybase.io/maksim' target='_blank'>Keybase</a></li>
       <li><a href='https://medium.com/@maksim_s' target='_blank'>Medium</a></li>
     </ul>
@@ -28,6 +26,7 @@ description: "I grew up in Kyrgyzstan, but moved to the US for college and event
       <li><a href='http://www.paulgraham.com/articles.html' target='_blank'>Paul Graham</a></li>
       <li><a href='http://www.brainpickings.org/' target='_blank'>Brain Pickings</a></li>
       <li><a href='http://avc.com/' target='_blank'>Fred Wilson</a></li>
+      <li><a href='http://ben-evans.com/' target='_blank'>Benedict Evans</a></li>
       <li><a href='http://kk.org/thetechnium/' target='_blank'>Kevin Kelly</a></li>
       <li><a href='http://cdixon.org/' target='_blank'>Chris Dixon</a></li>
       <li><a href='http://www.farnamstreetblog.com/' target='_blank'>Farnam Street</a></li>
