--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@ title: Home
   <div class='section'>
     <h3>Interesting links/blogs</h3>
     <ul>
-      <li><a href='http://www.scottaaronson.com/blog/' target='_blank'>Scott Aaronson</a></li>
       <li><a href='http://www.paulgraham.com/articles.html' target='_blank'>Paul Graham</a></li>
+      <li><a href='http://www.scottaaronson.com/blog/' target='_blank'>Scott Aaronson</a></li>
+      <li><a href='http://worrydream.com/' target='_blank'>Bret Victor</a></li>
       <li><a href='http://www.brainpickings.org/' target='_blank'>Brain Pickings</a></li>
       <li><a href='http://avc.com/' target='_blank'>Fred Wilson</a></li>
       <li><a href='http://ben-evans.com/' target='_blank'>Benedict Evans</a></li>
       <li><a href='http://kk.org/thetechnium/' target='_blank'>Kevin Kelly</a></li>
       <li><a href='http://cdixon.org/' target='_blank'>Chris Dixon</a></li>
       <li><a href='http://www.farnamstreetblog.com/' target='_blank'>Farnam Street</a></li>
-      <li><a href='http://fourhourworkweek.com/blog/' target='_blank'>Tim Ferriss</a></li>
       <li><a href='http://www.meltingasphalt.com/' target='_blank'>Melting Asphalt</a></li>
       <li><a href='http://waitbutwhy.com/' target='_blank'>Wait But Why</a></li>
     </ul>
