--- a/books/book.html
+++ b/books/book.html
@@ -2,9 +2,9 @@
   <div class='book'>
     <div class='book-title'>
       {% if post.book_notes %}
-        <a href='{{ post.url }}'><b>{{ post.book_title }} by {{ post.book_author }}</b></a>
+      <a href='{{ post.url }}'>{{ post.book_title }}</a><strong>*</strong> by {{ post.book_author }}
       {% else %}
-        <a href='{{ post.url }}'>{{ post.book_title }} by {{ post.book_author }}</a>
+        <a href='{{ post.url }}'>{{ post.book_title }}</a> by {{ post.book_author }}
       {% endif %}
     </div>
   </div>
